tdf#79304 - Handle CrossedOutItems in HTML export.

Change-Id: I766fedb34737a1a7815693bf496fa08c08f492b1
Reviewed-on: https://gerrit.libreoffice.org/39719
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 2f2eba56d1f8ec5cdcadb4852e8856858477c008)
Reviewed-on: https://gerrit.libreoffice.org/39722
Tested-by: Jenkins <ci@libreoffice.org>